# dueta

./: .gitignore  README.md  pyproject.toml
eval/: bleu_result.json  eval_on_bleu.py
inference/: translate.py
training/: create_model_repo.py  data_viz.ipynb  fine_tune.ipynb  tokenize_datasets.py
