[project]
name = "dueta"
version = "0.1.0"
description = "Scripts for training and inference of the Dueta model."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "huggingface-hub>=1.17.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "peft>=0.19.1",
    "python-dotenv>=1.2.2",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
